--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,8 +30,7 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  wedding_name: "Jack & Jill's Wedding"
-  wedding_couple_names: 'Jack & Jill'
-  wedding_date: 'Saturday, 1 January 2000'
-  wedding_location: 'South Pole'
+  party_name: "Sally Essom's Party"
+  party_date: 'Saturday, 14th January 2023'
+  party_location: 'East Grinstead Rugby Club'
   photo_credits: 'Photo Credits: Pexels'
